--- a/About.html
+++ b/About.html
@@ -11,8 +11,8 @@
         <h1>Portfolio</h1>
         <ul>
             <li><a href="About.html"> About </a></li>
-            <li><a href="projects.html"> Projects </a></li>
-            <li> <a href="contact.html">Contact </a></li>
+            <li><a href="Projects.html"> Projects </a></li>
+            <li> <a href="Contact.html">Contact </a></li>
         </ul>
     </nav>
     <section>
