--- a/Contact.html
+++ b/Contact.html
@@ -12,8 +12,8 @@
         <h1>Portfolio</h1>
         <ul>
             <li><a href="About.html"> About </a></li>
-            <li><a href="projects.html"> Projects </a></li>
-            <li><a href="contact.html">Contact </a></li>
+            <li><a href="Projects.html"> Projects </a></li>
+            <li><a href="Contact.html">Contact </a></li>
         </ul>
     </nav>
 <center><h1>Contact me</h1></center>
