--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
     </nav>
     <center><h1>Projects</h1></center>
     <section>
-            <video controls loop mute width="320" height="240" >
+            <video autoplay width="320" height="240" >
             <source src="coming-soon.mp4" type="video/mp4" />
             Please Check the video extension.
             </video>
