--- a/My-work/About.html
+++ b/My-work/About.html
@@ -14,7 +14,7 @@
 
 
     <section class="top-page">
-        <img src="logo.png" width="268px" heigh="33px">
+        <img src="Logo.png" width="268px" heigh="33px">
         <nav class="navv">
             <li><a>About us</a></li>
             <li><a>Career</a></li>
