--- a/Check point 6 - Copie/store.html
+++ b/Check point 6 - Copie/store.html
@@ -29,8 +29,8 @@
             
         </div>      
         <h5>Total a payer : <span id="Total">0</span>TND </h5>
-        <button type="button" class="btn btn-danger" width="30px" onclick="Removeall()">clear cart</button>
-        <button id ="Paybutton" type="button" class="btn btn-secondary" width="30px" onclick="PayShow()">Pay</button>
+        <button type="button" class="btn btn-danger" width="2,4vw" onclick="Removeall()">clear cart</button>
+        <button id ="Paybutton" type="button" class="btn btn-secondary"  width="2,4vw" onclick="PayShow()">Pay</button>
         
     </div>
 
