--- a/Check point 6/store.html
+++ b/Check point 6/store.html
@@ -18,8 +18,8 @@
     </div>
     
 <section class="topofpage">
-        <img id="Logo" src="/images/Logo.svg">     
-        <img id="shopcart" src="/images/Shopping cart.png" onclick="showfunction()">
+        <img id="Logo" src="Logo.svg">     
+        <img id="shopcart" src="Shopping cart.png" onclick="showfunction()">
   </section>
 
 
@@ -40,89 +40,89 @@
 <section class="middleofpage">
 
     <div class="items">
-        <img src="/images/Article1.png">
+        <img src="Article1.png">
         <div class="etiquette">
             <h1 id="itemtitle1">Introduction to Embedded Systems</h1>
             <p>Price :<span id="itemprice1">150</span> TND/Trimestre</p> 
             <button id="1" type="button" class="btn btn-warning" onclick="itemNB(event)">buy</button>
-            <img id="like1" src="/images/like.svg" onclick="likefunction(1)">  
+            <img id="like1" src="like.svg" onclick="likefunction(1)">  
         </div>
 
     </div>
 
     <div class="items">
-        <img src="/images/Article2.png">
+        <img src="Article2.png">
         <div class="etiquette">
             <h1 id="itemtitle2">Introduction aux pratiques de gestion de projets</h1>
             <p>Price :<span id="itemprice2">199</span> TND/Trimestre</p> 
             <button id="2" type="button" class="btn btn-warning" onclick="itemNB(event)">buy</button>
-            <img id="like2" src="/images/like.svg" onclick="likefunction(2)">  
+            <img id="like2" src="like.svg" onclick="likefunction(2)">  
         </div>
 
     </div>
 
     <div class="items">
-        <img src="/images/Article3.png">
+        <img src="Article3.png">
         <div class="etiquette">
             <h1 id="itemtitle3">Introduction to Business Intelligence</h1>
             <p>Price :<span id="itemprice3">299</span> TND/Trimestre</p> 
             <button id="3"  type="button" class="btn btn-warning" onclick="itemNB(event)">buy</button>
-            <img id="like3" src="/images/like.svg" onclick="likefunction(3)">  
+            <img id="like3" src="like.svg" onclick="likefunction(3)">  
         </div>
 
     </div>
 
     <div class="items">
-        <img src="/images/Article4.png">
+        <img src="Article4.png">
         <div class="etiquette">
             <h1 id="itemtitle4">Introduction to Cybersecurity</h1>
             <p>Price :<span id="itemprice4">350</span> TND/Trimestre</p> 
             <button id="4" type="button" class="btn btn-warning" onclick="itemNB(event)">buy</button>
-            <img id="like4" src="/images/like.svg" onclick="likefunction(4)">
+            <img id="like4" src="like.svg" onclick="likefunction(4)">
         </div>
 
     </div>
 
     <div class="items">
-        <img src="/images/Article5.png">
+        <img src="Article5.png">
         <div class="etiquette">
             <h1 id="itemtitle5">How to Become a Full-stack JavaScript Developer</h1>
             <p>Price :<span id="itemprice5">480</span> TND/Trimestre</p> 
             <button id="5" type="button" class="btn btn-warning" onclick="itemNB(event)">buy</button>
-            <img id="like5" src="/images/like.svg" onclick="likefunction(5)">  
+            <img id="like5" src="like.svg" onclick="likefunction(5)">  
         </div>
 
     </div>
 
     <div class="items">
-        <img src="/images/Article6.png">
+        <img src="Article6.png">
         <div class="etiquette">
             <h1 id="itemtitle6">The DevOps Bootcamp</h1>
             <p>Price :<span id="itemprice6">295</span> TND/Trimestre</p> 
             <button id="6" type="button" class="btn btn-warning" onclick="itemNB(event)">buy</button>
-            <img id="like6" src="/images/like.svg" onclick="likefunction(6)">  
+            <img id="like6" src="like.svg" onclick="likefunction(6)">  
         </div>
 
     </div>
 
     <div class="items">
-        <img src="/images/Article7.png">
+        <img src="Article7.png">
         <div class="etiquette">
             <h1 id="itemtitle7">The Digital Marketing Bootcamp</h1>
             <p>Price :<span id="itemprice7">210</span> TND/Trimestre</p> 
             <button id="7" type="button" class="btn btn-warning" onclick="itemNB(event)">buy</button>
-            <img id="like7" src="/images/like.svg" onclick="likefunction(7)">  
+            <img id="like7" src="like.svg" onclick="likefunction(7)">  
         </div>
 
     </div>
 
     <div class="items">
-        <img src="/images/Article8.png">
+        <img src="Article8.png">
         <div class="etiquette">
             <h1 id="itemtitle8">Scratch and App Inventor (FR)</h1>
             <p>Price :<span id="itemprice8">650</span> TND/Trimestre</p> 
             <button id="8" type="button" class="btn btn-warning" onclick="itemNB(event)">buy</button>
-            <img id="like8" src="/images/like.svg" onclick="likefunction(8)">  
+            <img id="like8" src="like.svg" onclick="likefunction(8)">  
         </div>
 
     </div>
