--- a/Check point 6/store.html
+++ b/Check point 6/store.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/js.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="js.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>  
     <title>Gomycode-Check point 6 "Store"</title>
 </head>
