--- a/Project/Menu.html
+++ b/Project/Menu.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/Menu.css">
+    <link rel="stylesheet" href="Menu.css">
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="/js/Menu.js"></script>
+    <script src="Menu.js"></script>
      <title>Gomycode-Project</title>
 </head> 
 
